--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,17 @@
   text-align: center;
   font-weight: bolder;
   }
+
+ .container button {
+   margin-top: 5%;
+ } 
 .header {
   font: 400 40px/0.8 'Great Vibes', Helvetica, sans-serif;
   text-align: center;
   color: pink;
   text-shadow: 4px 4px 3px rgba(0,0,0,0.1);
   text-decoration: none;
-  margin: 15% auto;
+  margin: 5% auto;
   font-weight: bolder;
   
 }
@@ -24,7 +28,7 @@
   font: 400 30px/0.8 'Great Vibes', Helvetica, sans-serif;
   text-align: center;
   color: pink;
-  margin-top: 145%;
+  margin-top: 125%;
   margin-bottom: 10%;
   font-weight: bolder;
 }
@@ -48,11 +52,21 @@ a.landing-link {
   padding: 3px;
 }
 
+.container button {
+    all: unset;
+    color: pink;
+    border-radius: 30%;
+    padding: 1% 4% 1% 4%;
+    border: white 1px solid;
+    margin-top: 5%;
+    margin-right: 70%;
+  
+}
+
 
 
 
   .home {
-    
     background-image: url('http://static.wixstatic.com/media/4d73f4_98ae495e2190e5e72c54253c5a8dc9e9.jpg/v1/fill/w_740,h_800,al_c,q_90/4d73f4_98ae495e2190e5e72c54253c5a8dc9e9.webp');
     background-position: center;
     background-repeat: no-repeat;
@@ -78,13 +92,14 @@ a.landing-link {
   }
 
   .home-img {
-    height: 278px;
-    margin-top: 17%;
+    height: 285px;
+    margin-top: 16%;
+    margin-right: 2%;
   }
 
   .img-home {
-    width: 76%;
-    height: 100%;
+    width: 71%;
+    height: 93%;
     clip-path: circle(50% at 50% 50%);
     opacity: 0.5;
     filter: alpha(opacity=50); /* For IE8 and earlier */
@@ -150,4 +165,23 @@ p {
   justify-content: space-around;
   font-size: larger;
   margin-top: 10%;
+}
+
+.lilyscarousel {
+  margin-top: 45%;
+}
+
+.lilyscarouseltwo {
+  margin-top: 15%;
+  margin-bottom: 15%;
+}
+
+.lilys-link {
+  font: 400 20px/.8 'Great Vibes', Helvetica, sans-serif;
+  color: pink;
+  text-decoration: none;
+  border-radius: 30%;
+  padding: 1% 4% 1% 4%;
+  border: white 1px solid;
+  font-weight: bolder;
 }
