--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,14 @@ p {
   padding-top: 10%;
 }
 
+.lily h4 {
+  color: pink;
+  font: 400 20px/0.8 'Great Vibes', Helvetica, sans-serif;
+  margin: 2%;
+  padding-top: 10%;
+  font-weight: bolder;
+}
+
 .bnButtons {
   display: flex;
   flex-flow: row nowrap;
@@ -168,11 +176,11 @@ p {
 }
 
 .lilyscarousel {
-  margin-top: 45%;
+  margin-top: 35%;
 }
 
 .lilyscarouseltwo {
-  margin-top: 15%;
+  margin-top: 10%;
   margin-bottom: 15%;
 }
 
