--- a/src/App.css
+++ b/src/App.css
@@ -199,7 +199,7 @@ p {
 
 .lilys-link {
   font: 400 20px/.8 'Great Vibes', Helvetica, sans-serif;
-  color: pink;
+  color: purple;
   text-decoration: none;
   border-radius: 30%;
   padding: 1% 4% 1% 4%;
