--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ a.landing-link {
 
 
   .home {
-    background-image: url('./images/blue.webp');
+    background-image: url('./images/HomeMoon.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
