--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,11 @@
   font-weight: bolder;
   }
 
- .container button {
-   margin-top: 5%;
+ .buttonL {
+   margin: 5%;
    color: white !important;
+   text-align: start;
+   font: 400 30px/0.8 'Great Vibes', Helvetica, sans-serif;
  } 
 .header {
   font: 400 40px/0.8 'Great Vibes', Helvetica, sans-serif;
