--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,16 @@
 body {
-  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('https://i.pinimg.com/originals/70/4c/80/704c80ea4a26621f9e7c0e6ddd538e02.jpg');
+  background-image: url('./images/aries2.jpg');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100vw 65vh;
   color: black;
   
-}
-
-
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
