--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,11 @@
 .home {
   height: 100vh;
   width: 100vw;
-  background: url('./images/aries7.jpg') no-repeat center;
+  background: url('./images/aries7.jpg') no-repeat center black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: 100vw 100vh;
 }
 
  .buttonL {
